# gke-rolling-updates-demo

./: .bazelrc  .gitignore  BUILD.bazel  Jenkinsfile  Makefile  README.md  WORKSPACE  env  go.mod  go.sum
blue-green-upgrade/: README-QWIKLABS.md  README.md  cluster_ops.sh  validate.sh
data/: mapping.json
expand-contract-upgrade/: README-QWICKLABS.md  README.md  cluster_ops.sh  validate.sh
in-place-rolling-upgrade/: README-QWIKLABS.md  README.md  cluster_ops.sh  main.tf  outputs.tf  provider.tf  validate.sh  variables.tf
manager/: BUILD.bazel  main.go
manager/cmd/: BUILD.bazel  create.go  gkeversion.go  root.go  version.go
manager/pkg/cluster/: BUILD.bazel  cluster.go  cluster_test.go
manager/pkg/operation/: BUILD.bazel  operation.go  operation_test.go
manager/pkg/utils/: utils.go
manifests/: es-client-pdb.yaml  es-client.yaml  es-data-pdb.yaml  es-data-stateful.yaml  es-data-svc.yaml  es-discovery-svc.yaml  es-master-pdb.yaml  es-master.yaml  es-svc.yaml  hello-server.yaml  hello-svc.yaml
placer/: BUILD.bazel  main.go
placer/cmd/: BUILD.bazel  root.go
placer/pkg/regions/: BUILD.bazel  regions.go
test/: configure-jenkins-environment.sh  make.sh
