load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/GoogleCloudPlatform/gke-rolling-updates-demo/placer",
    visibility = ["//visibility:private"],
    deps = ["//placer/cmd:go_default_library"],
)

go_binary(
    name = "placer",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "placer_image",
    files = ["//placer:placer"],
    cmd = ["placer"],
)

container_push(
    name = "push_placer_image",
    image = ":placer_image",
    format = "Docker",
    registry = "gcr.io",
    repository = "seymourd-sandbox/pso-helmsman/placer",
    tag = "dev",
)
