load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "gkeversion.go",
        "root.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/gke-rolling-updates-demo/manager/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//manager/pkg/cluster:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_google_cloud_go//container/apiv1:go_default_library",
    ],
)
