load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["operation.go"],
    importpath = "github.com/GoogleCloudPlatform/gke-rolling-updates-demo/manager/pkg/operation",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_google_cloud_go//container/apiv1:go_default_library",
        "@go_googleapis//google/container/v1:container_go_proto",
    ],
)
