load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["operation.go"],
    importpath = "github.com/GoogleCloudPlatform/gke-rolling-updates-demo/manager/pkg/operation",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_google_cloud_go//container/apiv1:go_default_library",
        "@go_googleapis//google/container/v1:container_go_proto",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["operation_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@com_google_cloud_go//container/apiv1:go_default_library",
        "@go_googleapis//google/container/v1:container_go_proto",
        "@go_googleapis//google/rpc:status_go_proto",
        "@org_golang_google_api//option:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//metadata:go_default_library",
    ],
)
