load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["regions.go"],
    importpath = "github.com/GoogleCloudPlatform/gke-rolling-updates-demo/placer/pkg/regions",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_google_api//compute/v1:go_default_library",
    ],
)
